<resources>
    <string name="hostname">Hostname:</string>
    <string name="timeout_label">Timeout:</string>
    <string name="invaild_timeout">Invalid timeout value 1 to 127 only</string>
    <string name="app_name">Traceroute</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="complated">Trace Completed</string>
    <string name="copied">Copied</string>
    <string name="time_out">Request timed out.</string>
    <string name="unknown_host">Unknown Host&#160;</string>
    <string name="no_ipv6"><br/>Host %1$s dose not have any IPv6 address available.</string>
    <string name="no_ipv4"><br/>Host %1$s dose not have any IPv4 address available.</string>
    <string name="unreachable">Destination Host Unreachable</string>
    <string name="trace_stop">Trace Stopped</string>
    <string name="stop">Stop</string>
    <string name="stopping">stopping trace…</string>
    <string name="ISP">ISP</string>
    <string name="city">City</string>
    <string name="org">Organisation</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="ip_address">IP Address</string>w
    <string name="timing">ms</string>
    <string name="ip_info_title">IP Information</string>
    <string name="private_IP">This is a private IP address</string>
    <string name="ip_lookup">Looking Up IP address Info…</string>
    <string name="ip_lookup_error">Error looking up IP address</string>
    <string name="no_net">Network is unreachable</string>
    <string name="no_net6">Network is unreachable or network does not support IPv6</string>
</resources>