<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:gravity="center"
        android:rowCount="5">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/ISP"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/org"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/org"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/country"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/region"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/region"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/city"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="5dp" />
    </GridLayout>
</LinearLayout>